resources/assets/scss/global/inputs.scss
/* ... */
.input-wrapper {
    position: relative;
}

.input-wrapper input {
    width: 100%;
    padding-right: 40px;
}

.password-toggle {
    position: absolute;
    top: 50%;
    right: 12px;
    transform: translateY(-50%);
    background: none;
    border: none;
    cursor: pointer;
    padding: 0;
    color: inherit;
}

